# Skillbox_practice_works_26

./: CMakeLists.txt  README.md
include/: AddressBook.cpp  AddressBook.h  Phone.cpp  Phone.h  Player.cpp  Player.h  Track.cpp  Track.h  VirtualScreen.cpp  VirtualScreen.h  VirtualWindow.cpp  VirtualWindow.h  skillbox_work26_task1.h  skillbox_work26_task2.h  skillbox_work26_task3.h  use_lib.h
src/: AddressBook.cpp  CMakeLists.txt  Phone.cpp  Player.cpp  Track.cpp  VirtualScreen.cpp  VirtualWindow.cpp  main.cpp  skillbox_work26_task1.cpp  skillbox_work26_task2.cpp  skillbox_work26_task3.cpp  use_lib.cpp
